# bundle_adjustment_on_manifold

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bundle_adjuster_on_manifold.cc  docker_run.sh  sample_bal_dataset.sh
include/odometry/: Bundler.h  Feature.h  Utils.h
src/: Feature.cc  Utils.cc  frontend.cc
